Fix - grey search on Firefox
Firefox, je te hais. Mis en place d'un -moz-placeholder, ajout d'une opacité 1, troc du padding pour un text-indent, tout ça pour ce petit navigateur caractériel.

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,11 @@ input::placeholder {
     font-weight: 900;
     color: black;
 }
+input::-moz-placeholder {
+    text-indent: 10%;
+    color: black;
+    opacity: 1;
+}
 
 #button {
     width: 150px;
